syntax = "proto3";
option csharp_namespace = "BlazorBoilerplate.Server";

import "Enumerations.proto";

  

message GetObjectsInformationRequest {
  repeated string identifiers = 1;
}

message GetObjectsInformationResponse {
  repeated ObjectInformation objectInformations = 1;
}


message ObjectInformation {
  string identifier = 1;
  map<string, string> informations = 2;
}

message GetHomeOverviewInformationRequest {
  string userIdentifier = 1;
}

message GetHomeOverviewInformationResponse {
  int32 datasetAmount = 1;
  int32 trainingAmount = 2;
  int32 modelAmount = 3;
  int32 runningTrainingAmount = 4;
}

message CreateNewUserRequest {

}

message CreateNewUserResponse {
    string userIdentifier = 1;
}
